--- a/package.json
+++ b/package.json
@@ -6,9 +6,25 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "beta": "^0.0.1",
+    "bootstrap": "^5.3.0",
+    "firebase": "^9.22.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.9.0",
+    "react-router-dom": "^6.12.1",
+    "react-scripts": "4.0.3",
+    "react-slick": "^0.29.0",
+    "react-to-pdf": "^0.0.14",
+    "react-typed": "^1.2.0",
+    "reactstrap": "^9.2.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.3.2",
+    "v2": "^0.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "^6.0.9"
   }
 }
