--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-to-pdf": "^0.0.14",
     "react-typed": "^1.2.0",
