--- a/package.json
+++ b/package.json
@@ -1,58 +1,57 @@
 {
-  "name": "learn-self24",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
-    "beta": "^0.0.1",
-    "bootstrap": "^5.3.0",
-    "firebase": "^9.22.2",
-    "react": "16.13.1",
-    "react-bootstrap": "^2.7.4",
-    "react-card-flip": "^1.2.0",
-    "react-dom": "^17.0.2",
-    "react-facebook-login": "^4.1.1",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.9.0",
-    "react-router-dom": "^17.0.2",
-    "react-scripts": "^5.0.1",
-    "react-slick": "^0.29.0",
-    "react-to-pdf": "^0.0.15",
-    "react-typed": "^1.2.0",
-    "reactstrap": "^9.2.0",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^9.3.2",
-    "v2": "^0.0.3",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "react-error-overlay": "^6.0.9"
-  }
+    "name": "learn-self24",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@react-pdf/renderer": "^3.1.12",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "aos": "^2.3.4",
+        "beta": "^0.0.1",
+        "bootstrap": "^5.3.0",
+        "firebase": "^9.22.2",
+        "react": "16.13.1",
+        "react-bootstrap": "^2.7.4",
+        "react-card-flip": "^1.2.0",
+        "react-facebook-login": "^4.1.1",
+        "react-hot-toast": "^2.4.1",
+        "react-icons": "^4.9.0",
+        "react-router-dom": "^6.15.0",
+        "react-scripts": "^5.0.1",
+        "react-slick": "^0.29.0",
+        "react-typed": "^1.2.0",
+        "reactstrap": "^9.2.0",
+        "slick-carousel": "^1.8.1",
+        "swiper": "^9.3.2",
+        "v2": "^0.0.3",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "react-error-overlay": "^6.0.9"
+    }
 }
