--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@react-pdf/renderer": "^3.1.12",
+      
+        "@restart/ui": "^1.6.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -12,11 +13,12 @@
         "bootstrap": "^5.3.0",
         "firebase": "^9.22.2",
         "react": "16.13.1",
-        "react-bootstrap": "^2.7.4",
+        "react-bootstrap": "^2.8.0",
         "react-card-flip": "^1.2.0",
         "react-facebook-login": "^4.1.1",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.9.0",
+        "react-pdf": "^7.3.3",
         "react-router-dom": "^6.15.0",
         "react-scripts": "^5.0.1",
         "react-slick": "^0.29.0",
