--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "@material-ui/core": "^4.12.4",
         "@restart/ui": "^1.6.3",
         "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
+        "@testing-library/react": "13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "aos": "^2.3.4",
         "beta": "^0.0.1",
