--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.12.4",
+        "@material-ui/core": "4.12.4",
+        "react": "^16.8.0", 
+        "react-dom": "^16.8.0",
         "@restart/ui": "^1.6.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "13.3.0",
@@ -12,11 +14,10 @@
         "beta": "^0.0.1",
         "bootstrap": "^5.3.0",
         "firebase": "^9.22.2",
-        "react": "^18.0.0-rc.3",
+      
         "react-bootstrap": "^2.8.0",
         "react-card-flip": "^1.2.0",
-        "react-dom": "^18.0.0-rc.3",
-        "react-facebook-login": "^4.1.1",
+            "react-facebook-login": "^4.1.1",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.9.0",
         "react-pdf": "^7.3.3",
