--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
         "beta": "^0.0.1",
         "bootstrap": "^5.3.0",
         "firebase": "^9.22.2",
-        "react": "^16.8.0",
+        "react": "^18.2.0",
         "react-bootstrap": "^2.8.0",
-        "react-dom": "^16.8.0",
+        "react-card-flip": "^1.2.0",
+        "react-dom": "^18.2.0",
         "react-facebook-login": "^4.1.1",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.9.0",
@@ -22,6 +23,7 @@
         "react-router-dom": "^6.15.0",
         "react-scripts": "^5.0.1",
         "react-slick": "^0.29.0",
+        "react-to-pdf": "^0.0.14",
         "react-typed": "^1.2.0",
         "reactstrap": "^9.2.0",
         "slick-carousel": "^1.8.1",
